# zenodo-dl

./: Cargo.toml  LICENSE  README.md
src/cli/: Cargo.toml  zenodo_dl.rs
src/lib/: Cargo.toml  lib.rs
